--- a/form.css
+++ b/form.css
@@ -13,7 +13,6 @@ body {
     background-color: rgba(82, 84, 84, 0.238);
 
 }
-
 .form input[type="text"],
 .form input[type="password"] {
     display: block; 
@@ -24,10 +23,9 @@ body {
     width: 250px;
 }
 label{
-    padding: 20px;
+    padding:20px;
 }
-
-.form .btn {
+.form button {
     width: 100px;
     position: absolute;
     margin: 10px;
@@ -39,21 +37,10 @@ label{
     top:70%;
     right: 0;
 }
-/* .form button{
-     position: absolute;
-    margin: 10px;
-    padding: 10px;
-    background-color: blue;
-    color: white;
-    top:70%;
-    right: 0;
-} */
 .btn:hover {
     background-color: black;
     transition-duration: 0.3s;
 }
-
-.form input[type="text"],
-.form input[type="password"]:invalid {
-    border-radius: 1px solid red;
+.form button:invalid {
+    border: 1px solid red;
 }
